--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -407,7 +407,7 @@ Both models forecast large reductions in incidence in Poland during May that did
 In comparison to the ensemble model the surrogate model appeared less likely to place weight on infeasibly large reductions in incidence during periods of declining incidence but on other hand was more likely to forecast continuing increases in incidence (for example in February in Slovakia and Poland).
 Italy and Germany, which had the highest number of submitted models of the example locations had little clear difference in performance between the ensemble and surrogate models compared to other example locations.
 
-```{r vis-forecasts, fig.cap = "a.) Weighted interval scores at the one-week and four-week forecast horizon by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom. b.)Forecasts of notified test positive cases (per 10,000 population) by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom,  by forecast horizon (one to four weeks). Incidence rates are shown on a log scale. 30\\%, 60\\%, and 90\\% credible intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time.", out.width = "95%", fig.height = 12, fig.width = 18}
+```{r vis-forecasts, fig.cap = "a.) Weighted interval scores at the one-week and four-week forecast horizon by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom. b.) Forecasts of notified test positive cases (per 10,000 population) by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom,  by forecast horizon (one to four weeks). Incidence rates are shown on a log scale. 30\\%, 60\\%, and 90\\% credible intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time.", out.width = "95%", fig.height = 12, fig.width = 18}
 p <- (
   plot_wis(wis, locs) +
    theme(strip.text.x = element_blank()) |
@@ -428,9 +428,9 @@ suppressWarnings(print(p))
 Evaluating the ensemble and surrogate models using the weighted interval score across all locations and forecast dates we found that the mean relative performance of the surrogate model was `r relative_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_wis_by_horizon[horizon == 4, ris]` at the four week horizon.
 Indicating that the ensemble forecast outperformed the surrogate forecast for all horizons by approximately 100% on average with the surrogate model performing worst at the one and four-week horizon.
 However, much of this outperformance was driven by a small subset of forecasts with relative performance having a heavy tail (Figure \@ref(fig:assemble-eval) a). 
-If we instead consider median relative performance (note not a proper score) we find that, relative to the ensemble, the surrogate scored `r relative_median_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_median_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_median_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_median_wis_by_horizon[horizon == 4, ris]` at the four week horizon.
+If we instead consider median relative performance (note not a proper scoring rule) we find that, relative to the ensemble, the surrogate scored `r relative_median_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_median_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_median_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_median_wis_by_horizon[horizon == 4, ris]` at the four week horizon.
 Looking across the distribution of relative scores by horizon we see little evidence that relative forecast quality decreased with time, though the tail of the distribution appears slightly heavier at the four-week time horizon (Figure \@ref(fig:assemble-eval) a).
-`r relative_wis_thresholds[, better_than]` of surrogate forecasts scored better than the comparable ensemble forecast, `r relative_wis_thresholds[, fifty_percent]` performed within 50% of the comparable ensemble forecat, and scored `r relative_wis_thresholds[, more_than_100_percent]` performed worse than 100% more than the comparable ensemble forecast.
+`r relative_wis_thresholds[, better_than]` of surrogate forecasts scored better than the comparable ensemble forecast, `r relative_wis_thresholds[, fifty_percent]` performed within 50% of the comparable ensemble forecat, and `r relative_wis_thresholds[, more_than_100_percent]` scored performed worse than 100% more than the comparable ensemble forecast.
 
 The surrogate model's relative performance varied over time with substantially worse performance from January to March compared to later in the year across all forecast horizons (Figure \@ref(fig:assemble-eval) b).
 The majority of the difference in performance appeared to be driven by a thicker right tail with this being a particular feature of forecasts at longer horizons. Notably, forecast performance in March had a bimodal distribution at the four-week horizon with a substantial fraction of surrogate forecasts outperforming the ensemble.
@@ -498,7 +498,7 @@ suppressWarnings(print(p))
 
 ### Forecast calibration {-}
 
-Overall the surrogate model was well calibrated at the 30%, 60% and 90% credible intervals whilst the ensemble model was in general poorly calibrated with calibration becoming worse at larger credible intervals.
+Overall the surrogate model was relatively well calibrated at the 30%, 60% and 90% credible intervals whilst the ensemble model was in general poorly calibrated with calibration becoming worse at larger credible intervals.
 When stratified by forecast horizon the ensemble forecast was best calibrated at the one-week forecast horizon and then became progressively less well calibrated as the forecast horizon increased with the worst calibration at the 90% credible interval (Figure \@ref(fig:plot-coverage) a). 
 In comparison, the surrogate forecast was less well calibrated at the one-week forecast horizon with a tendency to have a larger empirical coverage than required at longer horizons the surrogate forecast transitioned to being well calibrated and then had lower coverage than optimal though to a much lower degree than the ensemble forecast.
 This was not the case for the 90% credible interval where the surrogate model stably covered slightly more than the expected interval indicating forecasts were somewhat overly uncertain for this interval. 
@@ -542,71 +542,69 @@ We restricted ourselves to a model that could be easily understood, that produce
 We further provide a fully reproducible workflow for running and evaluating this model using GitHub actions facilitating others to do the same. 
 
 Over the 6 months of the study period, we found that our surrogate model produced forecasts that were visually similar to those from the forecast hub ensemble though with greater uncertainty.
-In a subset of example locations, we observed some variation in performance across locations, that the ensemble appeared biased toward underprediction, and the surrogate model appeared biased towards overprediction.
+In a subset of example locations, we observed some variation in performance across locations, that the ensemble appeared biased toward underprediction, and the surrogate model appeared slightly biased toward overprediction.
 Evaluating the relative performance of the surrogate model compared to the ECDC forecast hub ensemble we found that the mean performance was substantially worse but that this was largely driven by a relatively small subset of forecasts.
 The median relative performance was only marginally worse across forecast horizons with the distribution of relative scores having a heavy right tail.
-Performance varied by location and forecast date with the surrogate model performing worse in the first part of 2021 which may have been linked to increasing incidence rates across forecast locations linked to BA.2.
+Performance varied by location and forecast date with the surrogate model performing worse in the first part of 2022 which may have been linked to increasing incidence rates across forecast locations linked to BA.2.
 Unlike our earlier forecasting efforts, the effect of outlier forecasts was much reduced though the surrogate model was less likely to outperform the ensemble than our earlier forecasting model methodology [@refNikosinGermany].
-In general, the relative performance of the surrogate model was stable across forecast horizons, unlike our previous methods which rapidly became less performant, though the distribution of relative performance did have an increasingly heavy right tail as the forecast horizon increased indicating a greater share of forecasts performing very poorly in comparison the hub ensemble.
-As noted elsewhere, the forecast hub ensemble was poorly calibrated, particularly at longer forecast horizons and bigger credible intervals whereas the surrogate model was substantially better calibrated for all targets though it tended to overcover at large intervals.
+In general, the relative performance of the surrogate model was stable across forecast horizons, unlike our previous methods which rapidly became less performant, though the distribution of relative performance did have an increasingly heavy right tail as the forecast horizon increased indicating a greater share of forecasts performing very poorly in comparison to the hub ensemble.
+The forecast hub ensemble was poorly calibrated, particularly at longer forecast horizons and bigger credible intervals whereas the surrogate model was substantially better calibrated for all targets though it tended to overcover at large intervals.
 Stratifying the relative weighted interval score by interval we found that larger intervals (i.e the tails of the forecast distribution) were responsible for the majority of the difference in performance. 
 Indeed, the median point performance of the forecasts was comparable though the surrogate model performed substantially worse on average due to its skewed performance distribution.
 
 ## Limitations {-}
 
-Our study benefits from having been conducted using forecasts conducted in real-time, rather than retrospectively, and submitted to an independent forecast research hub (though we note the overlap between authors on this study and the ECDC forecast hub).
-This means that we can be confident we have captured how our forecast methodology behaves in real-world usage and that others can evaluate this for themselves. 
+Our study benefits from having been conducted using forecasts produced in real-time, rather than retrospectively, and submitted to an independent forecast research hub (though we note the overlap between authors on this study and the ECDC forecast hub).
+This means that we can be confident we have captured how our forecast methodology behaves in real-world usage, at least within our study period. 
 The downside of this approach is that it was not possible to update the surrogate model over time in response to initial evaluation or to explore other parameterisations that might be more successful of which there are likely several.
 However, as our study has been conducted with a focus on reproducibility and openness our findings can be replicated or extended by others regardless of compute availability (due to our use of GitHub actions as a compute platform which is freely available to researchers).
 Importantly in this study, we focussed on replicating the forecast hub ensembles' observed behaviour rather than attempting to define an optimal forecast for forecast consumers.
 It is likely that if we had instead aimed to develop a forecast methodology that minimised the evaluation criteria we planned to use, especially if we relaxed our assumed compute resource constraints, we would have produced forecasts that performed better relative to the hub ensemble.
-However, if we start from the view that the forecast hub ensemble has traits that are desirable for use by policy-makers (i.e robustness and good average performance) then our approach makes sense and may be optimal for producing a "good" forecast.
-This is the view often used in the literature when describing forecast ensembles.
-Our focus on replicating the performance of the hub ensemble is also useful as it highlights some of the emergent behaviour of the ensemble captured in our assumptions, such as auto-correlation across time points, modelled decrease in growth rate as the forecast horizon increases
+However, if we start from the view that the forecast hub ensemble has traits that are desirable for use by policy-makers (i.e robustness and good average performance), which can be found widely in the literature, then our approach makes sense and may be optimal for producing a "good" forecast.
+Our focus on replicating the performance of the hub ensemble is also useful as it highlights some of the emergent behaviour of the ensemble captured in our assumptions, such as auto-correlation across time points, and the growth rate tending towards zero as the forecast horizon increases.
 It also highlights some of the differences between our surrogate forecast model and the ensemble that may lead to new insights, such as the generally poor coverage of the ensemble that could not be explained by the assumptions we used in developing our surrogate methodology.
 Whilst we normalised reported cases to be population-adjusted incidence rates our results are conditional on the use of the weighted interval score as an evaluation metric.
 As this proper scoring rule measures absolute performance this means that forecasts during periods of higher incidence are given more weight than forecasts from periods of low incidence.
-It also means that potentially overpredicting is penalised more than underpredicting as incidence rates are bounded at zero but relatively weakly bounded by populations at the upper bound (as incidence rates are typically only a small fraction of the overall population).
+It also means that overprediction is penalised more than underprediction as incidence rates are bounded at zero but relatively weakly bounded by populations at the upper bound (as incidence rates are typically only a small fraction of the overall population).
 This bias could explain the relatively poor performance of the surrogate model, compared to the ensemble, despite the surrogate model being comparably well-calibrated.
-We consider alternative methods of forecast evaluation that would be robust to this potential source of bias but choose to stick closely to the methodology used by the ECDC forecast hub as these choices inform the development of submitted models and so are key to our findings.
+We considered alternative methods of forecast evaluation that would be robust to this potential source of bias but choose to stick closely to the methodology used by the ECDC forecast hub as these choices inform the development of submitted models and so are key to our findings.
 
 ## Literature context {-}
 
 There are no other studies in the epidemiology literature which we are aware of that attempt to develop a forecasting model based on the observed behaviour of a multi-team, multi-model ensemble.
 Few studies focus on delivering computationally feasible forecasting models in a reproducible framework backed by an openly accessible compute platform. 
-However, the CDC, ECDC, and Germany/Poland forecasting hubs have published a range of evaluations of forecasts submitted to their platforms and the relative performance of their ensembles. 
-In general, these studies have struggled to draw general conclusions about the structural assumptions of forecast models they consider "good" (generally they have defined this as minimising the weighted interval score as done in this study).
-The CDC forecast hub identified the top 5 performing models and noted they made the following structural assumptions.
-However, they did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions as done in this study to motivate the surrogate model.
-Similarly, the Germany and Poland, and ECDC forecasting hubs were able to identify forecast models that performed comparably well but did not derive structural assumptions that led to this performance or detail explicitly what the desirable performance characteristics would be, aside from optimising the weighted interval score.
-All comparable forecast hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness, though this was rarely fully defined, and should be the output used by forecast consumers.
-In general, during the study period, all projects used the same median ensemble forecast of all submissions after having concluded it was a favourable choice. 
-The CDC forecasting hub also evaluated a range of other ensemble approaches, such as inverse weighted interval score weighting, unweighted ensembles of a selection of models based on recent performance, and mean ensemble.
+However, the CDC [@REF], ECDC [@REF], and Germany/Poland [@REF] forecasting hubs have published a range of evaluations of forecasts submitted to their platforms and the relative performance of their ensembles. 
+In general, these studies have struggled to draw general conclusions about the structural assumptions of forecast models they consider "good" (generally they have defined this as minimising the weighted interval score as done in this study) and comparatively little attention has been paid to coverage.
+The CDC forecast hub identified the top 5 performing models and noted the structural assumptions they made [@REF].
+However, they did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions as done in this study to motivate the surrogate model or explore the performance of a forecasting model designed with these assumptions in mind.
+Similarly, the Germany and Poland, and ECDC forecasting hubs were able to identify forecast models that performed comparably as well as their ensemble forecasts but did not derive structural assumptions that led to this out-performance or detail explicitly what the desirable performance characteristics would be, aside from optimising the weighted interval score.
+All comparable forecast hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness, though this was rarely fully defined, and should be the output used by forecast consumers [@REF; @REF; @REF].
+In general, during the study period, all projects used the same unweighted median ensemble forecast of all submissions after having concluded it was a favourable choice [@REF]. 
+The CDC forecasting hub also evaluated a range of other ensemble approaches, such as inverse weighted interval score weighting, unweighted ensembles of a selection of models based on recent performance, and mean ensembling [@REF].
 Work on this is still ongoing but these more complex ensembling approaches were shown to outperform the median of all submitted forecasts in many cases.
-That being said no forecast hub has switched to these for their operational forecast implying they do not think the evidence base is strong enough for them to be used by forecast consumers and hence the median of all submitted forecasts remains the community-suggested default ensemble option. 
+That being said no forecast hub has switched to these alternative ensemble designs for their operational forecast implying they do not think the evidence base is strong enough for them to be used by forecast consumers and hence the median of all submitted forecasts remains the community-suggested default ensemble option and a sensible target for our study. 
 Other studies have been published evaluating single forecast models in comparison to ensemble performance from the forecast hub but in general, these have not focussed on replicating ensemble behaviour but rather optimising the target evaluation metric. 
-Our previous work also highlighted the lack of calibration in an ensemble forecast from the Germany/Poland forecasting hub compared to forecasts from epidemiological models and also noted the bias towards underprediction observed in the ensemble forecasts and not the model-based forecasts [@refNikosinGermany].
+Our previous work also highlighted the lack of calibration in an ensemble forecast from the Germany/Poland forecasting hub compared to forecasts from epidemiological models and noted the bias towards underprediction observed in the ensemble forecasts and not the model-based forecasts [@refNikosinGermany].
 
 ## Further work {-}
 
 Whilst we derived our surrogate model from a range of assumptions based on observing ensemble forecasts behaviour and the behaviour and structure of submitted models this was by no means as structured or complete a process as it could have been.
-In follow-up work, a more rigorous approach to this could be taken to further refine this set of assumptions. 
-The findings from our study may also be useful for informing these improved assumptions. 
+In follow-up work, a more rigorous approach to this could be taken to further refine this set of assumptions, in particular using the input of a wider pool of researchers. 
+The findings from our study may also be useful for informing this improved set of assumptions. 
 In addition, the model we derived based on our assumptions was likely not optimal both in terms of compute time and accuracy at reproducing ensemble-like behaviour.
-Models with a more complex auto-correlation structure and more refined approaches to localise trends should be explored to improve relative performance to ensemble forecasts.
-An example of a family of possible approaches are structural time series model which has many of the characteristics implied by our assumptions for how forecast ensembles typically operate.
-As we identified that the tails of our predictive distributions were responsible for a large proportion of the difference in performance compared to the forecast ensemble.
-It may be the case that post-processing of forecasts from our surrogate model to enhance their similarity to the forecast ensemble is a sensible strategy.
+Models with a more complex auto-correlation structure and more refined approaches to localised trends should be explored to improve relative performance to ensemble forecasts.
+An example of a family of possible approaches are structural time series models which have many of the characteristics implied by our assumptions for how forecast ensembles typically operate.
+As we identified that the tails of our predictive distributions were responsible for a large proportion of the difference in performance compared to the forecast ensemble it may be the case that post-processing of forecasts from our surrogate model would enhance their similarity to the forecast ensemble.
 This seems likely to improve out-of-sample performance but does not help with the secondary aim of understanding the implicit assumptions driving the performance of multi-model, multi-team infectious disease forecast ensembles.
 As we have hypothesised that the use of absolute scoring measures is inappropriate and leads to performance characteristics that are unlikely to be favoured by forecast stakeholders more work should be done in this area.
-If new forecast ensemble methods are adopted as best practice by forecast hubs then follow-up work attempting to create surrogate forecast models must also use these approaches and this will likely alter the observed characteristics of the hub ensemble forecasts, for example, the tendency to be poorly calibrated.
-Lastly, here we have only explored a surrogate for an ensemble for a single disease and a limited set of locations.
+If new forecast ensemble methods are adopted as best practice by forecast hubs then follow-up work attempting to create surrogate forecast models should also use these approaches and this will likely alter the observed characteristics of the hub ensemble forecasts, for example, the tendency to be poorly calibrated.
+Lastly, here we have only explored a surrogate for an ensemble for a single disease and a limited set of locations meaning our findings are difficult to generalise.
 Follow-up work should explore whether this behaviour holds across diseases and locations.
 However, this work is limited by the lack of large-scale forecast ensembling projects despite them showing obvious promise to improve the forecasts available to stakeholders.
 
 ## Conclusions {-}
 
-We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work may be useful for forecast users to understand the inherent assumptions of the forecasts they are making use of and to methodology developers thinking about how to develop forecasts that perform similary to current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
+We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work may be useful for forecast users to understand the inherent assumptions of the forecasts they are making use of and to researchers thinking about how to develop forecasts that perform similary to current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
 
 # Additional Information and Declarations {-}
 
